; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/kernel/extr_ftrace.c_ftrace_call_replace.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/kernel/extr_ftrace.c_ftrace_call_replace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PC_OFFSET = common dso_local global i64 0, align 8
@BL_OFFSET_MASK = common dso_local global i64 0, align 8
@BL_OPCODE = common dso_local global i64 0, align 8
@bl_insn = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ftrace_call_replace(i64 %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @PC_OFFSET, align 8
  %10 = add i64 %8, %9
  %11 = sub nsw i64 %7, %10
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = icmp slt i64 %12, -33554432
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i64, i64* %6, align 8
  %16 = icmp sgt i64 %15, 33554428
  br label %17

17:                                               ; preds = %14, %2
  %18 = phi i1 [ true, %2 ], [ %16, %14 ]
  %19 = zext i1 %18 to i32
  %20 = call i64 @unlikely(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %17
  %23 = call i32 @WARN_ON_ONCE(i32 1)
  store i8* null, i8** %3, align 8
  br label %32

24:                                               ; preds = %17
  %25 = load i64, i64* %6, align 8
  %26 = ashr i64 %25, 2
  %27 = load i64, i64* @BL_OFFSET_MASK, align 8
  %28 = and i64 %26, %27
  store i64 %28, i64* %6, align 8
  %29 = load i64, i64* @BL_OPCODE, align 8
  %30 = load i64, i64* %6, align 8
  %31 = or i64 %29, %30
  store i64 %31, i64* @bl_insn, align 8
  store i8* bitcast (i64* @bl_insn to i8*), i8** %3, align 8
  br label %32

32:                                               ; preds = %24, %22
  %33 = load i8*, i8** %3, align 8
  ret i8* %33
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @WARN_ON_ONCE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
